objects/Training_Get_Feedback__c.object
<CustomObject><fields>
        <fullName>Additional_comments__c</fullName>
        <description>Training Survey to capture the answer to - Any additional comments or suggestions, especially on how we can improve the training you receive from The MathWorks?</description>
        <inlineHelpText>Training Survey to capture the answer to - Any additional comments or suggestions, especially on how we can improve the training you receive from The MathWorks?</inlineHelpText>
        <label>Additional comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Class_Training_Instructor_User__c</fullName>
        <formula>Class__r.Instructor_User__c</formula>
        <label>Class Training Instructor User</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Type__c</fullName>
        <description>Capture the Class Type for which the survey is sent for</description>
        <inlineHelpText>Capture the Class Type for which the survey is sent for</inlineHelpText>
        <label>Class Type</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Training Get Feedback</relationshipLabel>
        <relationshipName>Training_Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Get Feedback</relationshipLabel>
        <relationshipName>Training_Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Course_overall__c</fullName>
        <description>Training Survey</description>
        <label>Course overall</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <description>to capture the email address of the person completing the Training Survey</description>
        <inlineHelpText>to capture the email address of the person completing the Training Survey</inlineHelpText>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Enrollee_Account__c</fullName>
        <description>Formula field to capture Contact's Account on the GFB object and populate on the email templates: L3 Kudos Alert for an Instructor and Low NPS alert.</description>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollee Account</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Enrollee_Email__c</fullName>
        <description>Formula field to capture Contact's Email on the GFB object and populate on the email templates: L3 Kudos Alert for an Instructor and Low NPS alert.</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollee Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Training Get Feedback</relationshipLabel>
        <relationshipName>Training_Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Facility_Appearance__c</fullName>
        <description>Training Survey</description>
        <label>Facility Appearance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Facility_Computers__c</fullName>
        <description>Training Survey</description>
        <label>Facility Computers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Facility_Location__c</fullName>
        <description>Training Survey</description>
        <label>Facility Location</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Facility_Overall__c</fullName>
        <description>Training Survey</description>
        <label>Facility Overall</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Facility_comments__c</fullName>
        <description>Training Survey</description>
        <label>Facility comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Instructor_Knowledge__c</fullName>
        <description>Training Survey</description>
        <label>Instructor knowledge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Get Feedback (Instructor)</relationshipLabel>
        <relationshipName>Training_Get_Feedback1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Instructor_clearness__c</fullName>
        <description>Training Survey</description>
        <label>Instructor clearness</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Instructor_facilitate__c</fullName>
        <description>Training Survey</description>
        <label>Instructor facilitate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Instructor_overall__c</fullName>
        <description>Training Survey</description>
        <label>Instructor overall</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Intended_Work_Use__c</fullName>
        <description>From Level 3 Survey Question - How do you intend to use this software (MATLAB, Simulink, etc.) in your work?</description>
        <label>Software Use at Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>L3_Instructor__c</fullName>
        <description>Formula field to capture Instructor on a L3 survey email template.</description>
        <formula>Class__r.Primary_Instructor__r.FirstName + ' ' + Class__r.Primary_Instructor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L3 Instructor</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Learning_Applied__c</fullName>
        <description>From Level 3 Survey Question - Did you have a chance to apply what you learned in the training?</description>
        <label>Application After Training</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Manual_facilitated_learning__c</fullName>
        <description>Training Survey</description>
        <label>Manual facilitated learning</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Most_Difficult_Aspect__c</fullName>
        <description>From Level 3 Survey Question - What was the most difficult aspect of the software (MATLAB, Simulink, etc.) to learn?</description>
        <label>Difficult to Learn</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>NPS__c</fullName>
        <description>Training Survey</description>
        <label>NPS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Name__c</fullName>
        <description>To capture the name of the person completing the survey</description>
        <inlineHelpText>To capture the name of the person completing the survey</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_application__c</fullName>
        <description>Training Survey</description>
        <label>Primary application</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Productivity_Significantly_Increased__c</fullName>
        <description>From the Level 3 Survey Question - Please rate the training on the following criteria: Training significantly increased my work productivity</description>
        <label>Productivity Significantly Increased</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Proficiency_Significantly_Increased__c</fullName>
        <description>From Level 3 Survey Question - Please rate the training on the following criteria: Training significantly increased my proficiency with using MathWorks products</description>
        <label>Proficiency Significantly Increased</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Proficiency_after_training__c</fullName>
        <description>Training Survey</description>
        <label>Proficiency after training</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Proficiency_before_training__c</fullName>
        <description>Training Survey</description>
        <label>Proficiency before training</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Reason_Not_Applied__c</fullName>
        <description>From Level 3 Survey Question - If not, why not? (in regards to 'did not have chance to apply what you learned')</description>
        <label>Reasons Training Not Applied</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Training_Interests_Code_Gen__c</fullName>
        <description>From Get Feedback survey, Training Interests</description>
        <label>Training Interests Code Gen</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Training_Interests_Comments__c</fullName>
        <description>From the Level 3 Survey Question - What other topics would you be interested in receiving training on</description>
        <label>Training Interests Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Training_Interests_Matlab__c</fullName>
        <description>From Get Feedback survey, Training Interests</description>
        <label>Training Interests Matlab</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Training_Interests_Simulink__c</fullName>
        <description>From Get Feedback survey, Training Interests</description>
        <label>Training Interests Simulink</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Useful_parts_of_training__c</fullName>
        <description>Training Survey</description>
        <label>Useful parts of training</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>What_you_will_do_different__c</fullName>
        <description>Training Survey</description>
        <label>What you will do different</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>content_format_clear__c</fullName>
        <description>Training Survey</description>
        <label>Content/Format clear</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>difficulty_of_course__c</fullName>
        <description>Training Survey</description>
        <label>Difficulty of course</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>learn_about_course__c</fullName>
        <description>Training Survey</description>
        <label>How you learned about course</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>learning_objectives_met__c</fullName>
        <description>Training Survey</description>
        <label>Learning objectives met</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>pace_of_course__c</fullName>
        <description>Training Survey</description>
        <label>Pace of course</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>relevant_examples_exercise__c</fullName>
        <description>Training Survey</description>
        <label>Relevant examples &amp; exercise</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>for Get Feedback records that are related to Training</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Training Get Feedback</label><nameField>
        <label>Training Get Feedback Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Training Get Feedback</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Contact__c</columns>
        <columns>content_format_clear__c</columns>
        <columns>difficulty_of_course__c</columns>
        <columns>Email__c</columns>
        <columns>Enrollment__c</columns>
        <columns>Facility_Appearance__c</columns>
        <columns>Facility_comments__c</columns>
        <columns>Instructor__c</columns>
        <columns>Primary_application__c</columns>
        <columns>Additional_comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Level_1_Survey</fullName>
        <active>true</active>
        <label>Level 1 Survey</label>
    </recordTypes><recordTypes>
        <fullName>Level_3_Survey</fullName>
        <active>true</active>
        <label>Level 3 Survey</label>
    </recordTypes></CustomObject>